# TirolServer

./: .gitignore  .ruff.toml  LICENSE  README.md  pyproject.toml
.config/: griffe2md.toml
docs/: README.md
scripts/: gendocs.py
tirolserver/: config.py  server.py
tirolserver/commons/: __init__.py  logger.py  type.py  utils.py
tirolserver/core/: __init__.py  cleaner.py  database.py  fetcher.py  markdown.py
tirolserver/core/clean/: __init__.py  base.py  beautifulSoup.py  crawl4ai.py  readability.py  simpleremove.py  trafilatura.py  unstructured.py
tirolserver/dirtyapp/: ScraplingApp.py  ScraplingPool.py
tirolserver/routers/: __init__.py  api.py  utils.py
tirolserver/routers/api/: __init__.py  cleanhtml.py  testdb.py  web_fetch.py
tirolserver/routers/api/v1/: __init__.py  cleanhtml.py  web_fetch.py  web_search.py
tirolserver/routers/api/v2/: __init__.py  test.py
tirolserver/utils/: __init__.py  logger.py  utils.py
