[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [{name = "Emck"}]
description = "Tirol Server"
keywords = ["Tirol", "Server", "fetch web url"]
license = "MIT"
license-files = ["LICENSE"]
name = "tirolserver"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.3"

dependencies = [
  "fastapi>=0.136.1",
  "generic-connection-pool>=0.7.0",
  "gunicorn>=25.3.0",
  "html2text>=2025.4.15",
  "lmdb>=2.2.0",
  "msgpack>=1.1.2",
  "readability-lxml>=0.8.4.1",
  "scrapling[ai]>=0.4.7",
  "selectolax>=0.4.7",
  "setproctitle>=1.3.7",
  "trafilatura>=2.0.0",
  "unstructured>=0.22.26",
  "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
  {include-group = "docs"},
]

docs = [
  "griffe-inherited-docstrings>=1.1.3",
  "griffe-runtime-objects>=0.3.1",
  "griffe-sphinx>=0.2.1",
  "griffe2md>=1.5.0",
  "jinja2>=3.1.6",
  "mdformat-gfm>=1.0.0",
]

[project.scripts]
tirolserver = "tirolserver.server:main"
gendocs = "scripts.gendocs:main"

[tool.setuptools.packages.find]
include = ["tirolserver*", "scripts*"]
where = ["."]
